feat(access): review/enforce consistent API access controls
* Added EXISTS_ENTIY privilege
* Added CREATE_ENTITY privilege
* Fix cache key calcualation
* Fix search view priv inheritence